cluster/apps/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  type: ExternalName
  externalName: 192.168.1.147
  ports:
    - port: 8096
